# EasyMathDataset

./: .gitignore  EasyMathDataset.json  README.md  pyproject.toml
src/easymathdataset/: EasyMathDataset.json  __init__.py  dataset_manager.py  main.py  proof_problems_gpt.py  proof_response_gpt.py
src/obviousmathdataset/: ObviousMathData.json  __init__.py  main.py  proof_problems_gpt.py
